--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -1,101 +1,105 @@
 name: eShopOnWeb Build and Test
 
+#Triggers (uncomment line below to use it)
 on: [push, workflow_dispatch]
 
-# ---------- Global configuration ----------
+#Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
   RESOURCE-GROUP: az2006-rg
   LOCATION: eastus
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: f3848fa2-b0cf-4f86-96ff-11e739d0e55e
-  # Globally unique webapp name (lowercase, 2-60 chars, letters/digits/hyphens)
-  WEBAPP-NAME: az2006app-${{ github.run_id }}
+  WEBAPP-NAME: az20006app31102
+
 
 jobs:
-  # ---------- Build/Test/Publish ----------
+  #Build, test and publish .net web project in repository
   buildandtest:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup .NET (GA)
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '8.0.x'   # no preview SDK
-
-      - name: Build
-        run: dotnet build ./eShopOnWeb.sln --configuration Release
-
-      - name: Test
-        run: dotnet test ./eShopOnWeb.sln --configuration Release
-
-      - name: Publish app
-        run: |
-          dotnet publish ./src/Web/Web.csproj -c Release -o ${{ env.DOTNET_ROOT }}/myapp
-          cd ${{ env.DOTNET_ROOT }}/myapp
-          zip -r ../app.zip .
-
-      - name: Upload app artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-artifact
-          path: ${{ env.DOTNET_ROOT }}/app.zip
-
-      - name: Upload bicep template
-        uses: actions/upload-artifact@v4
-        with:
-          name: bicep-template
-          path: ${{ env.TEMPLATE-FILE }}
-
-  # ---------- Deploy Infra + Publish App ----------
+    #checkout the repository
+    - uses: actions/checkout@v4
+    #prepare runner for desired .net version SDK
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: '8.0.x'
+        dotnet-quality: 'preview'
+    #Build/Test/Publish the .net project
+    - name: Build with dotnet
+      run: dotnet build ./eShopOnWeb.sln --configuration Release
+    - name: Test with dotnet
+      run: dotnet test ./eShopOnWeb.sln --configuration Release
+    - name: dotnet publish
+      run: |
+        dotnet publish ./src/Web/Web.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        cd ${{env.DOTNET_ROOT}}/myapp
+        zip -r ../app.zip .
+    # upload the published website code artifacts
+    - name: Upload artifact for deployment job
+      uses: actions/upload-artifact@v4
+      with:
+        name: .net-app
+        path: ${{env.DOTNET_ROOT}}/app.zip
+        
+    # upload the bicep template as artifacts for next job
+    - name: Upload artifact for deployment job
+      uses: actions/upload-artifact@v4
+      with:
+        name: bicep-template
+        path: ${{ env.TEMPLATE-FILE }}
+        
+  # Use Bicep to deploy infrastructure + Publish webapp 
   deploy:
     runs-on: ubuntu-latest
     needs: buildandtest
     environment:
-      name: Development
+      name: 'Development'
     steps:
-      - name: Download app artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: app-artifact
-          path: .net-app
+    
+    #Download the publish files created in previous job
+    - name: Download artifact from build job
+      uses: actions/download-artifact@v4
+      with:
+        name: .net-app
+        path: .net-app
+  
+    #Download the bicep templates from previous job
+    - name: Download artifact from build job
+      uses: actions/download-artifact@v4
+      with:
+        name: bicep-template
+        path: bicep-template
+        
+   #Login in your azure subscription using a service principal (credentials stored as GitHub Secret in repo)
+    - name: Azure Login
+      uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+           
+    # Deploy Azure WebApp using Bicep file
+    - name: deploy
+      uses: azure/arm-deploy@v2
+      with:
+        subscriptionId: ${{ env.SUBSCRIPTION-ID }}
+        resourceGroupName: ${{ env.RESOURCE-GROUP }}
+        template: bicep-template/webapp.bicep
+        parameters: 'webAppName=${{ env.WEBAPP-NAME }} location=${{ env.LOCATION }}'
+        failOnStdErr: false   
+    
+    # Publish website to Azure App Service (WebApp)
+    # Step disabled due to issue where the site sometimes can't be found: https://github.com/microsoft/pipelines-appservice-lib/issues/56. Instead deploy using CLI
+    - name: Publish Website to WebApp
+      if: false #Disable step due to comment above
+      uses: Azure/webapps-deploy@v3
+      with:
+        type: ZIP
+        app-name: ${{ env.WEBAPP-NAME  }}
+        package: .net-app/app.zip
 
-      - name: Download bicep template
-        uses: actions/download-artifact@v4
-        with:
-          name: bicep-template
-          path: bicep-template
-
-      - name: Azure Login (Service Principal secret)
-        uses: azure/login@v2
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      # ---- Validate first (surfaces the real error) ----
-      - name: Validate Bicep
-        uses: Azure/cli@v2
-        with:
-          inlineScript: |
-            az deployment group validate \
-              --resource-group "${{ env.RESOURCE-GROUP }}" \
-              --template-file "bicep-template/webapp.bicep" \
-              --parameters webAppName="${{ env.WEBAPP-NAME }}" location="${{ env.LOCATION }}"
-
-      # ---- Deploy with the recommended action ----
-      - name: Deploy Bicep
-        uses: Azure/bicep-deploy@v1
-        with:
-          subscription-id: ${{ env.SUBSCRIPTION-ID }}
-          resource-group-name: ${{ env.RESOURCE-GROUP }}
-          template-file: bicep-template/webapp.bicep
-          parameters: webAppName=${{ env.WEBAPP-NAME }} location=${{ env.LOCATION }}
-
-      # ---- Publish the website ZIP to the Web App ----
-      - name: Publish Website to WebApp (CLI)
-        uses: Azure/cli@v2
-        with:
-          inlineScript: |
-            az webapp deploy \
-              --name "${{ env.WEBAPP-NAME }}" \
-              --resource-group "${{ env.RESOURCE-GROUP }}" \
-              --src-path ".net-app/app.zip"
+    # Publish website to Azure App Service using CLI (WebApp)
+    - name: Publish Website to WebApp
+      uses: Azure/cli@v2
+      with:
+        inlineScript: |
+             az webapp deploy --name ${{ env.WEBAPP-NAME }} --resource-group ${{ env.RESOURCE-GROUP }} --src-path .net-app/app.zip --type zip
